--- a/.github/workflows/cd-front-next-js-web.yml
+++ b/.github/workflows/cd-front-next-js-web.yml
@@ -19,7 +19,7 @@ jobs:
       matrix:
         node-version: [16.13.0]
     env:
-      SOURCE_DIR: "./out/"
+      SOURCE_DIR: "./front-next-js-web/out/"
       AWS_REGION: ${{ secrets.AWS_REGION }}
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
