test(cd-frontend): Make changes for testing cd

--- a/.github/workflows/cd-front-next-js-web.yml
+++ b/.github/workflows/cd-front-next-js-web.yml
@@ -65,4 +65,5 @@ jobs:
       - name: Invalidate CloudFront
         uses: chetan/invalidate-cloudfront-action@master
         env:
+          DEBUG: "1"
           DISTRIBUTION: ${{ secrets.DISTRIBUTION_ID }}
