--- a/.github/workflows/cd-front-next-js-web.yml
+++ b/.github/workflows/cd-front-next-js-web.yml
@@ -63,7 +63,7 @@ jobs:
           AWS_S3_BUCKET: front-next-js-web-${{ steps.vars.outputs.short_ref }}
 
       - name: Invalidate CloudFront
-        uses: chetan/invalidate-cloudfront-action@master
+        uses: chetan/invalidate-cloudfront-action@v2.4
         env:
           DEBUG: "1"
           DISTRIBUTION: ${{ secrets.DISTRIBUTION_ID }}
