test(cd-backend): Make changes to test cd backend- changed dockerfile

--- a/back-node-hapi-pg/Dockerfile
+++ b/back-node-hapi-pg/Dockerfile
@@ -5,7 +5,7 @@ ADD . /app-build
 WORKDIR /app-build
 RUN --mount=type=cache,target=/root/.yarn YARN_CACHE_FOLDER=/root/.yarn yarn --frozen-lockfile
 RUN yarn
-RUN yarn build:env
+RUN yarn build:$ENVIRONMENT_NAME
 
 FROM node:14-alpine
 ARG ENVIRONMENT_NAME
