test(cd-backend): Make changes to test cd backend- changed dockerfile

--- a/.github/workflows/cd-back-node-hapi-pg.yml
+++ b/.github/workflows/cd-back-node-hapi-pg.yml
@@ -70,7 +70,7 @@ jobs:
           DOCKER_BUILDKIT: 1
         run: |
           docker build --no-cache -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG . --build-arg ENVIRONMENT_NAME=${{ steps.environment.outputs.environment_name }}
-          # docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
       # Create and configure Amazon ECS task definition
       - name: Render Amazon ECS task definition
