--- a/back-node-hapi-pg/package.json
+++ b/back-node-hapi-pg/package.json
@@ -18,6 +18,9 @@
     "start": "node dist/main.js",
     "build:env": "webpack-cli --config webpack/production.config.js --stats-error-details",
     "build:dev": "webpack-cli --config webpack/dev.config.js --stats-error-details",
+    "build:development": "export ENVIRONMENT_NAME=development && rm -rf dist && webpack --mode development --config  webpack/dev.config.js",
+    "build:qa": "export ENVIRONMENT_NAME=qa && rm -rf dist && webpack --mode production --config  webpack/production.config.js",
+    "build:production": "export ENVIRONMENT_NAME=production && rm -rf dist && webpack --mode production --config webpack/production.config.js",
     "start:local": "nodemon",
     "format": "prettier-standard './**/**/*.js'",
     "lint": "npm run lint:js",
