test(be-cd-hapi)

--- a/.github/workflows/cd-be-node-hapi-pg.yml
+++ b/.github/workflows/cd-be-node-hapi-pg.yml
@@ -5,7 +5,7 @@ name: CD be-node-hapi-pg - development
 on:
   push:
     branches:
-      - dev
+      - develop
       - qa
       - main
     paths: "main/**"
